fix: scrollbar on laptop screens

--- a/src/index.scss
+++ b/src/index.scss
@@ -29,7 +29,8 @@ body {
   }
   
   height: 100vh;
-  overflow-y: auto;
+  overflow-y: visible;
+  box-sizing: border-box;
   margin: 0 auto;
   display: flexbox;
 }
